// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Time renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      disabled={true}
      placeholder=" "
      type="time"
      value="Text"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      disabled={true}
      placeholder=" "
      type="time"
      value="Text"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT lbBxjT"
    disabled={true}
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        disabled={true}
        placeholder=" "
        type="time"
        value="Text"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY eNHHez"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY kTwDzI"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY jTdfvW"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV loSChI"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      placeholder=" "
      readOnly={true}
      type="time"
      value="Read only text"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      placeholder=" "
      readOnly={true}
      type="time"
      value="Read only text"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder=" "
        readOnly={true}
        type="time"
        value="Read only text"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY doHeXV"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY dNMcoK"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-eZceyY jUekBm"
      dir="rtl"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-eZceyY hOJZzZ"
      dir="rtl"
      placeholder="Placeholder"
      type="time"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY iBXnWf"
        dir="rtl"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-erijoS kPCrAG"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <input
      className="sc-eZceyY doHeXV"
      placeholder="medium"
      type="time"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <input
      className="sc-eZceyY dNMcoK"
      placeholder="large"
      type="time"
    />
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP huoRxK"
    >
      <input
        className="sc-eZceyY qyezZ"
        placeholder="xlarge"
        type="time"
      />
      <label
        className="sc-erijoS htSbIl"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Time supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      medium
    </label>
    <input
      className="sc-eZceyY jPBdqa"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <label
      className="sc-MAqyW czGgYr"
    >
      large
    </label>
    <input
      className="sc-eZceyY kkoGQh"
      placeholder="Placeholder"
      type="time"
    />
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-dDPqvT drzQbB"
  >
    <div
      className="sc-hixjlP kJWjmt"
    >
      <input
        className="sc-eZceyY cexKEg"
        placeholder="Placeholder"
        type="time"
      />
      <label
        className="sc-erijoS htSbIl"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-hQrevV dKIWOw"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
